<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_herbivora"
            android:icon="@drawable/ic_baseline_grass_24"
            android:title="@string/menu_herbivora" />
        <item
            android:id="@+id/nav_karnivora"
            android:icon="@drawable/ic_baseline_set_meal_24"
            android:title="@string/menu_karnivora" />
        <item
            android:id="@+id/nav_omnivora"
            android:icon="@drawable/ic_baseline_local_florist_24"
            android:title="@string/menu_omnivora" />
    </group>
</menu>