<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.modul4.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_herbivora"
        android:name="com.example.modul4.ui.hewanherbivora.HerbivoraFragment"
        android:label="@string/menu_herbivora"
        tools:layout="@layout/fragment_hewan" >
        <action
            android:id="@+id/action_nav_herbivora_to_herbiFragment"
            app:destination="@id/hewanActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_karnivora"
        android:name="com.example.modul4.ui.hewanherbivora.KarnivoraFragment"
        android:label="@string/menu_karnivora"
        tools:layout="@layout/fragment_hewan" >
        <action
            android:id="@+id/action_nav_karnivora_to_herbiFragment"
            app:destination="@id/hewanActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_omnivora"
        android:name="com.example.modul4.ui.hewanherbivora.OmnivoraFragment"
        android:label="@string/menu_omnivora"
        tools:layout="@layout/fragment_hewan" >
        <action
            android:id="@+id/action_nav_omnivora_to_herbiFragment"
            app:destination="@id/hewanActivity" />
    </fragment>

    <activity
        android:id="@+id/hewanActivity"
        android:name="com.example.modul4.ui.hewanherbivora.HewanDetail"
        android:label="@string/label_hewan"
        tools:layout="@layout/hewan_detail" >
    </activity>
</navigation>